--- a/subview.html
+++ b/subview.html
@@ -5,26 +5,34 @@
     <meta charset="utf-8" />
     <title>Example App</title>
     <meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1.0, maximum-scale=1.0"/>
-
-    <link rel="stylesheet" type="text/css" href="css/bootstrap.css">
-    <link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
 <body>
+
+<style type="text/css">
+.view { 
+  padding: 5px;
+  border: 1px solid #000;
+}
+</style>
 
 <div id="wrapper" class="yui3-app yui3-app-views"></div>
 
 <script id="combo-template" type="text/x-handlebars-template">
+<div class="view">
 <button>Flip</button>
 <div>
   <div data-subview="a"></div>
   <div data-subview="b"></div>
 </div>
+</div>
 </script>
 
 <script id="swap-template" type="text/x-handlebars-template">
+<div class="view">
 <button>Swap</button>
 <div>
   <div data-subview="current"></div>
+</div>
 </div>
 </script>
 
@@ -44,7 +52,7 @@ Y.PlainView = Y.Base.create('plainView', Y.View, [], {
     var container = this.get('container');
 
     //container.setHTML(html);
-    container.append('<div style="height: 70px; background-color: '+this.get('color')+'">'+this.get('label')+' Render</div>');
+    container.append('<div style="height: 70px; background-color: '+this.get('color')+'">'+this.get('label')+' View</div>');
 
     return this;
   }
