Move Composite View out to its own YUI Module

--- a/subview.html
+++ b/subview.html
@@ -38,8 +38,10 @@
 
 
 <script src="http://yui.yahooapis.com/3.8.1/build/yui/yui-min.js"></script>
+<script src="js/compositeview.js"></script>
+
 <script>
-YUI().use('app', 'handlebars', function (Y) {
+YUI().use('app', 'handlebars', 'compositeview', function (Y) {
 
 Y.PlainView = Y.Base.create('plainView', Y.View, [], {
   template: '',
@@ -61,44 +63,6 @@ Y.PlainView = Y.Base.create('plainView', Y.View, [], {
   ATTRS: {
   }
 });
-
-Y.CompositeView = function() {};
-Y.CompositeView.prototype = {
-
-  initializer: function (config) {
-
-    var self = this;
-    if (!this.views) this.views = {};
-    if (!this.subviews) this.subviews = {};
-
-    Y.Object.each(config.views, function(view, name) {
-      self.views[name] = view;
-    });
-    Y.Object.each(config.subviews, function(view, name) {
-      if (Y.Lang.isString(view)) {
-        self.subviews[name] = self.views[view];
-      } else {
-        self.subviews[name] = view;
-      }
-    });
-  },
-
-  attachChildViews: function() {
-    var subviews = this.subviews,
-        container = this.get('container'),
-        x;
-
-    for (x in subviews) {
-      //subviews[x].render();
-      container.one('[data-subview="'+x+'"]').append(subviews[x].get('container'));
-    }
-  },
-
-  assignSubView: function(region, view) {
-    this.subviews[region] = this.views[view];
-  },
-
-};
 
 Y.ComboView = Y.Base.create('comboView', Y.View, [Y.CompositeView], {
   events: {
