data-subview ---> data-region

--- a/subview.html
+++ b/subview.html
@@ -21,8 +21,8 @@
 <div class="view">
 <button>Flip</button>
 <div>
-  <div data-subview="top"></div>
-  <div data-subview="bottom"></div>
+  <div data-region="top"></div>
+  <div data-region="bottom"></div>
 </div>
 </div>
 </script>
@@ -31,7 +31,7 @@
 <div class="view">
 <button>Swap</button>
 <div>
-  <div data-subview="current"></div>
+  <div data-region="current"></div>
 </div>
 </div>
 </script>
