Have View add yui-appi-views class

--- a/subview.html
+++ b/subview.html
@@ -31,7 +31,7 @@
 <div class="view">
 <button class="swap">Swap</button>
 <div>
-  <div class="yui3-app-views" data-region="current"></div>
+  <div data-region="current"></div>
 </div>
 </div>
 </script>
