Added Total Pages

--- a/paginated-list.html
+++ b/paginated-list.html
@@ -18,7 +18,7 @@ Filter:
   <button data-value="animal">Animal</button>
   <button data-value="food">Food</button>
   <button data-value="other">Other</button>
-<div>
+</div>
 <div class="sort">
 Sort:
   <button data-value="">None</button>
