--- a/subview.html
+++ b/subview.html
@@ -38,6 +38,7 @@
 
 
 <script src="http://yui.yahooapis.com/3.8.1/build/yui/yui-min.js"></script>
+<script src="js/view-region.js"></script>
 <script src="js/compositeview.js"></script>
 
 <script>
